--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,7 @@
   "description": "",
   "main": "index.js",
   "authors": [
-    "HK Chen <hk_chen@gss.com.tw>"
+    "HK Chen <ilikeiceblue@gmail.com>"
   ],
   "license": "MIT",
   "homepage": "",
