--- a/package.json
+++ b/package.json
@@ -15,15 +15,20 @@
     "browser-sync": "^2.24.6",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.1",
+    "gulp-clean": "^0.4.0",
+    "gulp-clean-css": "^3.10.0",
     "gulp-concat": "^2.6.1",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^4.1.0",
     "gulp-jade": "^1.1.0",
-    "gulp-minify-css": "^1.2.4",
     "gulp-order": "^1.1.1",
     "gulp-plumber": "^1.2.0",
     "gulp-postcss": "^7.0.1",
+    "gulp-sequence": "^1.0.0",
     "gulp-sourcemaps": "^2.6.4",
     "gulp-uglify": "^3.0.1",
-    "main-bower-files": "^2.13.1"
+    "main-bower-files": "^2.13.1",
+    "minimist": "^1.2.0"
   },
   "devDependencies": {
     "gulp-load-plugins": "^1.5.0",
